# LCAv

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: build-release.yml
lca-modeller/notebook/: tutorial-notebook.ipynb
lca-modeller/notebook/data/: custom_lcia_methods.yaml
lca_modeller/gui/: plots.py
lca_modeller/io/: configuration.py
lca_modeller/notebook/: tutorial-notebook.ipynb
lca_modeller/notebook/data/: lcia_gwp100_custom.csv
lcav/: helpers.py  lca_problem.py
lcav/gui/: plots.py
lcav/io/: configuration.py
lcav/io/resources/: configuration.json
lcav/notebook/: dev_aeromaps.ipynb  dev_notebook.ipynb  dev_premise.ipynb  methodology_example.ipynb  test_premise.ipynb  tutorial-notebook.ipynb
lcav/notebook/.ipynb_checkpoints/: dev_notebook-checkpoint.ipynb
lcav/notebook/data/: advanced_example.yaml  basic_example.yaml  basic_example_split_impacts.yaml  configuration.yaml  configuration_methodo.yaml  configuration_methodo_ei391.yaml  metadata_example.yaml  prospective_lca.yaml
lcav/notebook/data/.ipynb_checkpoints/: configuration-checkpoint.yaml
