[tool.poetry]
name = "lcav"
version = "0.0.0"
description = "LCAv is a Python toolbox for performing rapid, in-loop life cycle assessments of air transport systems"
authors = [
    "Félix POLLET <felix.pollet@isae-supaero.fr>",
    "Scott DELBECQ <scott.delbecq@isae-supaero.fr>",
    "Thomas PLANES <thomas.planes@isae-supaero.fr>"
]
keywords = ["aviation", "lca"]
license = "GPL-3.0-only"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
lca-algebraic = "1.1"
premise = "2.0.2"
bw2io = "0.8.12"
bw2data = "3.6.6"
bw2calc = "1.8.2"
ipywidgets = "^8.1.1"
plotly = "^5.0.0"
ipysheet = "^0.7.0"
"ruamel.yaml" = "^0.18.5"
matplotlib = "^3.6.2"
jupyterlab = "^3.3.0"
ensure = "^1.0.0"
pyvis = "^0.3.0"

tbb = "2021.10.0"  # For MacOS
intel-openmp = "2023.2.0"  # For MacOS

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
